<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="doubleBackToExit">Please press BACK again to exit.</string>
    <string name="msgQuitApp">Do you want to quit?</string>
    <string name="timeStart">00:00</string>
    <string name="searching">Search&#8230;</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="getListSongs">Get list of Advice&#8230;</string>
    <string name="downloadComplete">Download was successfull!</string>
    <string name="downloadStarted">Download has started!</string>
    <string name="downloaded">was Downloaded</string>
    <string name="songExisted">This file exists in SD Card.</string>
    <string name="noFoundMatch">Sorry, Not found. Try again please.</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="dd">đ</string>
    <string name="DD">Đ</string>
    <string name="please_wait_message">Please wait&#8230;</string>
    <string name="server_error">There is an error from server, please try again.</string>
    <string name="json_server_error">Communication error. Please try again!</string>
    <string name="song_error">An error when playing has occurred.</string>

    <string name="exo_controls_lock_description">Lock</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_scale_fill_description">Stretch</string>
    <string name="exo_controls_scale_fit_description">Fit to screen</string>
    <string name="exo_controls_scale_height_description">Fix Height</string>
    <string name="exo_controls_scale_width_description">Fix Width</string>
    <string name="exo_controls_scale_zoom_description">Crop</string>

    <!-- Menu -->
    <string name="menu">Menu</string>
    <string name="other">Other</string>
    <string name="most_favourite">Most Favourite</string>
    <string name="lastest">Latest</string>
    <string name="nominations">Nomination</string>
    <string name="series">Series</string>
    <string name="categoryMusic">Categories</string>
    <string name="playlist">Playlist</string>
    <string name="multiple_your_reward">Multiply Your Reward</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="my_download">My Download</string>
    <string name="settings">Settings</string>
    <string name="radio">Quran Radio</string>
    <string name="exitApp">Exit app</string>
    <string name="remove_other">remove other-move menu little up</string>

    <!-- Message -->
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="loading">Loading&#8230;</string>
    <string name="noNetwork">Network is not available.</string>
    <string name="enableRepeat">Enable repeat mode.</string>
    <string name="offRepeat">Off repeat mode.</string>
    <string name="enable_shuffle">Enable shuffle</string>
    <string name="off_shuffle">Off shuffle</string>
    <string name="enableShuffle">Enable shuffle mode.</string>
    <string name="offShuffle">Off shuffle mode.</string>
    <string name="msgRestartApp">Restart app to complete change language.</string>
    <string name="endPage">No more data</string>
    <string name="loadmore_success">New page has loaded successfully!</string>
    <string name="sort_by_id">Sort by Date</string>
    <string name="sort_by_views">Sort by Views</string>
    <string name="sort_by_download">Sort by Download</string>
    <!--title-->
    <string name="title_multiple_your_reward">Multiply Your Reward</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_about_us">About</string>
    <!-- Setting -->
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download">Download</string>
    <string name="Share">Share as..</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_as_alarm">Set as Alarm</string>
    <string name="set_as_notification">Set as Notification</string>
    <string name="set_as_contact_ringtone">Set as Contact</string>

    <!-- Setting -->
    <string name="language">Language</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="about">About</string>
    <!-- Playlist -->
    <string name="creatNewPlaylist">Create new playlist</string>
    <string name="playlistName">Playlist name</string>
    <string name="chooseSong">Select File</string>
    <string name="choosePlaylist">Select Playlist</string>
    <!--  Error -->

    <string-array name="arrayLanguage">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <!--multiple your reward-->
    <string name="multiple_title">Race to invest for your HereAfter</string>
    <string name="multiple_content_p1"></string>
    <string name="multiple_content_p2">In the name of Allah, the Kind, the Merciful.  Praise and thanks be to Allah, the Lord of the people. Messenger of Allah (Peace be on him) said:</string>
    <string name="multiple_content_p3">
 “When a man passes away, his good deeds will also come to an end except for three: Sadaqah Jariyah (continuous charity); a knowledge which is beneficial, or a good child who prays for the deceased)” { Sahih Muslim }</string>
    <string name="multiple_content_p4">Any Contribution Small or Large
will go towards spreading: "None is worthy of Worship but Allah. Muhammad is the slave and Messenger of Allah"  .\n
</string>
    <string name="multiple_link">nurulquran.com/courses</string>
    <!--Radio-->
    <string name="html_radio"><iframe frameborder="no" height="180px" marginheight="0" marginwidth="0" scrolling="no" src="https://mixlr.com/users/3778788/embed?color=26328f&#38;autoplay=true" width="100%"></iframe><small><a style="color:#1a1a1a;text-align:left; font-family:Helvetica, sans-serif; font-size:11px;" href="http://mixlr.com/nqlive--2">NQLive is on Mixlr</a></small></string>
    <!--confirm download-->
    <string name="confirm_download"> exists in the SD card Are you sure you want to download?</string>
    <string name="exist_download"> Already exists in the SD card.</string>
    <string name="degree">Yes</string>
    <string name="undegree">OK</string>
    <!--about -->
    <string name="title_about">NurulQuran Institute</string>
    <string name="content_1">is a non-profit, non-sectarian, non-political organization working since 2001 dedicated to spreading the speech of God, the Quran &#38; Sunnah

through education &#38; social welfare while making it easily attainable for all walks of life.</string>
    <string name="content_2">Our Vision is to Enlighten the hearts, homes and &#32;&#32;lives  &#32;&#32;with  &#32;&#32;the  &#32;&#32;Nur  &#32;&#32;of  &#32;&#32;Al  &#32;&#32;Quran.
</string>
    <string name="content_3">For More Details Visit Us : </string>
    <string name="link_1">NurulQuran.com</string>
    <string name="link_2">NurulQuran.com</string>
    <!--confirm delete song-->
    <string name="delete_song">Delete</string>
    <string name="confirm_delete_song">Do you want to delete</string>
    <string name="exo_controls_back_description">back</string>
    <string name="video_title">video</string>
    <string name="exo_controls_audio_track_description">Audio</string>
    <string name="exo_controls_subtitle_track_description">subTitle</string>
    <string name="enable_random_adaptation">Enable random</string>
    <string name="selection_default">Select default</string>
    <string name="selection_disabled">disabled</string>
    <string name="storage_permission_denied">Storage Access Denied</string>
</resources>