<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <com.nurulquran.audio.activity.AspectRatioFrameLayout
        android:id="@+id/exo_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <SurfaceView
            android:id="@+id/exo_surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/exo_shutter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.nurulquran.audio.activity.SubtitleView
            android:id="@+id/exo_subtitles"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.nurulquran.audio.activity.AspectRatioFrameLayout>

    <FrameLayout
        android:id="@+id/exo_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIndicator"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@null"
            android:visibility="gone" />

        <TextView
            android:id="@+id/exo_progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@android:color/black"
            android:shadowRadius="3"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/exo_scale_toggle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowRadius="5"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llControlRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llControlTop"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/control_background"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/exo_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="@string/exo_controls_back_description"
                    android:padding="15dp"
                    android:src="@drawable/simple_btn_back" />
            </LinearLayout>

            <TextView
                android:id="@+id/exo_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical|center_horizontal|center|start"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/video_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/exo_audio_track"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/exo_controls_audio_track_description"
                android:padding="15dp"
                android:src="@drawable/simple_audiotrack"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/exo_subtitle_track"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/exo_controls_subtitle_track_description"
                android:padding="15dp"
                android:src="@drawable/simple_subtitle"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/exo_unlock"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="top|left|center_vertical|center_horizontal|center|start"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/simple_background"
                android:padding="10dp"
                android:src="@drawable/simple_unlock"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/exo_rotate"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="top|left|center_vertical|center_horizontal|center|start"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:src="@drawable/simple_rotate" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llControlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/control_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/exo_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.nurulquran.audio.activity.DefaultTimeBar xmlns:ns1="http://schemas.android.com/apk/res-auto"
                    xmlns:ns2="http://schemas.android.com/apk/res-auto"
                    xmlns:ns3="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/exo_progress"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight="1"
                    ns1:buffered_color="#c8ffffff"
                    ns2:played_color="@color/theme"
                    ns3:unplayed_color="#c8ffffff" />

                <TextView
                    android:id="@+id/exo_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simple_button_plat"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/exo_lock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simple_lock" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simple_button_plat"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/exo_prev"
                        style="@style/ExoMediaButton.Rewind"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simple_button_plat"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/exo_play"
                            style="@style/ExoMediaButton.Play"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/simple_button_plat"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/exo_pause"
                            style="@style/ExoMediaButton.Pause"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simple_button_plat"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/exo_next"
                        style="@style/ExoMediaButton.FastForward"

                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simple_button_plat"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/exo_scale_toggle"
                        style="@style/ExoMediaButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/simple_button_plat"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center">

                    <TextView android:id="@+id/togle_speed"
                        android:layout_height="wrap_content"
                        android:layout_width="50dp"
                        android:textColor="@color/white"
                        android:background="@color/blue_sky"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>